[tool.poetry]
name = "epidemic"
version = "0.1.0"
description = ""
authors = ["SkrudjReal <SkrudjReal@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cachetools = "^5.3.3"
humanize = "^4.9.0"
environs = "^11.0.0"
uvloop = "^0.19.0"
pyyaml = "^6.0.1"
aiogram = "^3.6.0"
redis = "5.0.4"
emoji = "^2.11.1"
apscheduler = "^3.10.4"
aiocryptopay = "^0.4.4"
aiohttp = "^3.9.5"
cryptography = "^43.0.1"
google-generativeai = "^0.8.4"
asyncmy = "^0.2.10"
pyinstrument = "^5.0.1"
pytz = "^2025.1"
torchaudio = "^2.6.0"
torch = "^2.6.0"
pydub = "^0.25.1"
numpy = "^2.2.3"
soundfile = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
